--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -14,6 +14,7 @@
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
 
+<script type="module" src="../components/custom-loader.js"></script>
 
 </head>
 
@@ -76,6 +77,7 @@
 
 
   <div class="items"></div>
+<custom-loader></custom-loader>
 
   <div class="separator"></div>
 
