--- a/app/backend/users.html
+++ b/app/backend/users.html
@@ -13,6 +13,11 @@
   <script type="module" src="../components/custom-user-item.js"></script>
 
   <script type="module" src="../components/custom-users.js"></script>
+  <script type="module" src="../components/custom-button.js"></script>
+
+<script type="module" src="../components/custom-users-buttons.js"></script>
+
+
 
 
 </head>
@@ -21,6 +26,7 @@
   <custom-drawer bind="customDrawer"></custom-drawer>
   <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
+  <custom-users-buttons></custom-users-buttons>
   <custom-users bind="customUsers"></custom-users>
   <script src="js/users.js"></script>
 </body>
